--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -158,18 +158,18 @@
 
       <section class='portfolio'>
         <div class='container'>
-          <h1>Check out our latest works</h1>
-          <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+          <h1 class="portfolio__caption">Check out our latest works</h1>
+          <p class="portfolio__text">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
           <div class='wrapper-flex'>
-            <figure>
+            <figure class="picture">
               <img src='img/image_granthotel.jpg' width='570px' height='390px'
               alt='Grand Motel gets an identity brushup'>
               <figcaption>
-                <h1>Grand Motel gets an identity brushup</h1>
-                <p>Identity</p>
+                <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
+                <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
-            <figure>
+            <figure class="portfolio__picture">
               <img src='img/image_figure2.jpg' width='570px' height='390px'
               alt='Fresh branding for a creative startup'>
               <figcaption>
@@ -185,16 +185,14 @@
             <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
           </ul> 
           
-          <ul class="wrapper-flex pagination pagination--portfolio-small">
-            <li class="pagination__item"></li>
-            <li class="pagination__item pagination__item--active"></li>
-            <li class="pagination__item"></li>
+          <ul class="pagination-portfolio">
+            <li class="pagination-portfolio__item pagination-portfolio__item--arrow-left"></li>
+            <li class="pagination-portfolio__item"></li>
+            <li class="pagination-portfolio__item pagination-portfolio__item--active"></li>
+            <li class="pagination-portfolio__item"></li>
+            <li class="pagination-portfolio__item pagination-portfolio__item--arrow-right"></li>
           </ul>
-         
-          <ul class="portfolio-arrows">
-              <li class="arrow-portfolio icon-left "></li>
-              <li class="arrow-portfolio icon-right "></li>
-            </ul>
+                   
         </div>   
       </section>
        
