--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -6,6 +6,8 @@
 @import "portfolio.less";
 @import "cooperation.less";
 @import "footer.less";
+@import "button.less";
+@import "wrapper-flex";
 
 
 
