--- a/src/styles/cooperation.less
+++ b/src/styles/cooperation.less
@@ -6,27 +6,15 @@
 	text-align: center;
 	background-color: #fff; 
 	
-	h1 {
+	&__caption {
 		font-size: 44px;
 		line-height: 54px;
 	}
 	
-	p {
+	&__text {
 		margin-top: 23px;
 		font-size: 22px;
 		line-height: 34px;
 	}
-	
-	.button-link {
-		display: inline-block;
-		padding: 16px 27px;
-	  margin-top: 36px;
-		color: #fff;
-		text-transform: uppercase;
-	  letter-spacing: .03em;
-	  background: #00bc9c;	  
-	  border-radius: 3px;
-	  box-shadow: 0 -2px rgba(0,0,0,.15) inset;
-  }
 }
   
