--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -95,7 +95,7 @@
                   the professionally and lovingly designed REEN</br>
                   website template. Customize your site with versatile
                   and easy to use features.</p>
-                <a class='slider__button' href='#'>Get Started Now</a>
+                <a class='button button--slider' href='#'>Get Started Now</a>
               </div>
             </div>
           </li>
@@ -160,37 +160,37 @@
         <div class='container'>
           <h1 class="portfolio__caption">Check out our latest works</h1>
           <p class="portfolio__text">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+          
           <div class='wrapper-flex'>
             <figure class="picture">
-              <img src='img/image_granthotel.jpg' width='570px' height='390px'
-              alt='Grand Motel gets an identity brushup'>
+              <img class="picture__img" src='img/image_granthotel.jpg' alt='Grand Motel gets an identity brushup'>
               <figcaption>
                 <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
                 <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
-            <figure class="portfolio__picture">
-              <img src='img/image_figure2.jpg' width='570px' height='390px'
-              alt='Fresh branding for a creative startup'>
+            <figure class="picture">
+              <img class="picture__img" src='img/image_figure2.jpg' alt='Fresh branding for a creative startup'>
               <figcaption>
-                <h1>Fresh branding for a creative startup</h1>
-                <p>Identity</p>
+                <h1 class="picture__name">Fresh branding for a creative startup</h1>
+                <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
           </div>
+
           <ul class='wrapper-flex wrapper-flex--portfolio-small'>
-            <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
-            <li><img src='img/image-item-2.jpg' width='270px' height='187px'></li>
-            <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
-            <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
+            <li><img src='img/image-item-1.jpg'></li>
+            <li><img src='img/image-item-2.jpg'></li>
+            <li><img src='img/image-item-3.jpg'></li>
+            <li><img src='img/image-item-4.jpg'></li> 
           </ul> 
           
           <ul class="pagination-portfolio">
-            <li class="pagination-portfolio__item pagination-portfolio__item--arrow-left"></li>
+            <li class="pagination-portfolio__arrow pagination-portfolio__arrow--left"></li>
             <li class="pagination-portfolio__item"></li>
             <li class="pagination-portfolio__item pagination-portfolio__item--active"></li>
             <li class="pagination-portfolio__item"></li>
-            <li class="pagination-portfolio__item pagination-portfolio__item--arrow-right"></li>
+            <li class="pagination-portfolio__arrow pagination-portfolio__arrow--right"></li>
           </ul>
                    
         </div>   
@@ -198,12 +198,12 @@
        
       <section class='cooperation'>
         <div class='container'>
-          <h1>Want to work with us?</h1>
-          <p>Magnis modipsae que voloratati andigen
+          <h1 class="cooperation__caption">Want to work with us?</h1>
+          <p class="cooperation__text">Magnis modipsae que voloratati andigen
              daepeditem quiate re porem aut labor. 
              Laceaque quiae sitiorem rest non restibusaes
              maio es dem tumquam.</p>
-          <a class='button-link' href='#'>Get in touch</a>
+          <a class='button button--cooperation' href='#'>Get in touch</a>
         </div>
       </section>
     </main>
