--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -211,84 +211,84 @@
     <footer class='footer'>
       <div class='container'>
         <div class='wrapper-flex wrapper-flex--footer-info'>
-          <div class='footer-item footer-item-1'>
-            <h1>Who we are</h1>
-            <a href="#">
-              <img src='img/footer_logo.svg'
-               width="130px" height="32px" alt='footer_logo'>
-            </a>
-            <p>Magnis modipsae voloratati andigen
-                 daepeditem quiate re porem que aut
-                 labor. Laceaque eictemperum quiae
-                 sitiorem rest non restibusaes 
-                 maio es dem tumquam.</p>
-            <a class="about" href="#">
-               <span>More about us</span>
+          <div class='footer__section'>
+            <h1 class="footer__title">Who we are</h1>
+            <img class="footer__logo" src='img/footer_logo.svg' alt='footer_logo'>
+            <p class="footer__text footer__text--one">
+              Magnis modipsae voloratati andigen
+              daepeditem quiate re porem que aut
+              labor. Laceaque eictemperum quiae
+              sitiorem rest non restibusaes 
+              maio es dem tumquam.</p>
+            <a class="footer__link footer__link--thick href="#">
+              <span class="footer__more-link">More about us</span>
             </a>   
           </div>
-          <div class='footer-item footer-item-2'>
-             <h1>Latest works</h1>
-            <ul class='footer-img'>
-               <li><img src='img/footer-image-1.jpg' width="126px" height="86px"></li>
-               <li><img src='img/footer-image-2.jpg' width="126px" height="86px"></li>
-               <li><img src='img/footer-image-3.jpg' width="126px" height="86px"></li>
-               <li><img src='img/footer-image-4.jpg' width="126px" height="86px"></li>
+          <div class='footer__section'>
+            <h1 class="footer__title">Latest works</h1>
+            <ul class='footer__pictures'>
+               <li class="footer__img"><img src='img/footer-image-1.jpg'></li>
+               <li class="footer__img"><img src='img/footer-image-2.jpg'></li>
+               <li class="footer__img"><img src='img/footer-image-3.jpg'></li>
+               <li class="footer__img"><img src='img/footer-image-4.jpg'></li>
             </ul>
           </div>
-          <div class='footer-item footer-item-3'>
-              <h1>Get in touch</h1>
-              <p>Doloreiur quia commolu ptatemp dolupta
-                 oreprerum tibusam eumenis et consent 
-                 accullignis dentibea autem inisita.</p>
+          <div class='footer__section'>
+            <h1 class="footer__title">Get in touch</h1>
+            <p class="footer__text">Doloreiur quia commolu
+              ptatemp dolupta oreprerum tibusam eumenis et consent 
+              accullignis dentibea autem inisita.</p>
+
             <ul>
               <li>
-                <a href="#">
-                   <img src='img/icon-location.svg' width="7px" height="12px">
-                   <span>84 Street, City, State 24813</span>
+                <a class="footer__link" href="#">
+                  <img class="footer__icon" src='img/icon-location.svg'>
+                  <span>84 Street, City, State 24813</span>
                 </a>
               </li>
               <li>
-                <a class="icon" href="#">
-                   <img src='img/icon-mobile.svg' width="7px" height="14px">
-                   <span>+00 (123) 456 78 90</span>
+                <a class="footer__link" href="#">
+                  <img class="footer__icon" src='img/icon-mobile.svg'>
+                  <span>+00 (123) 456 78 90</span>
                 </a>
               </li>
               <li>
-                <a class="icon" href="#">
-                   <img src='img/icon-mail.svg' width="11px" height="10px">
-                   <span>info@reen.com</span>
+                <a class="footer__link" href="#">
+                  <img class="footer__icon" src='img/icon-mail.svg'>
+                  <span>info@reen.com</span>
                 </a>
               </li>
             </ul>   
+
           </div>
-          <div class='footer-item footer-item-4'>
-              <h1>Free updates</h1>
-              <p>Conecus iure posae volor remped modis</br> 
-                aut lor volor accabora incim
-                 resto explabo.</p>
-            <form action="#" class="subscribe" method="POST">
-              <input type="email" placeholder="Enter your email address" required>    
-              <input type="submit" value="subscribe">
+          <div class='footer__section'>
+            <h1 class="footer__title">Free updates</h1>
+            <p class="footer__text">Conecus iure posae volor remped modis</br> 
+              aut lor volor accabora incim resto explabo.</p>
+            <form class="field" action="#"method="POST">
+              <input class="field__mail" type="email" placeholder="Enter your email address" required>    
+              <input class="field__btn" type="submit" value="subscribe">
             </form> 
           </div>
         </div>
       </div>
-      <div class="footer-ending">
+
+      <div class="page-footer">
         <div class="container">
-          <div class="wrapper-flex wrapper-flex--footer-ending">
-             <p>© 2014 REEN. All rights reserved.</p>
+          <div class="wrapper-flex wrapper-flex--page-footer">
+            <p class="page-footer__info">© 2014 REEN. All rights reserved.</p>
             <ul class='wrapper-flex wrapper-flex--footer-nav'>
-              <li><a href='#'>Home</a></li>
+              <li class="page-footer__link"><a href='#'>Home</a></li>
               <li>·</li>
-              <li><a href='#'>Portfolio</a></li>
+              <li class="page-footer__link"><a href='#'>Portfolio</a></li>
               <li>·</li>
-              <li><a href='#'>Blog</a></li>
+              <li class="page-footer__link"><a href='#'>Blog</a></li>
               <li>·</li>
-              <li><a href='#'>About</a></li>
+              <li class="page-footer__link"><a href='#'>About</a></li>
               <li>·</li>
-              <li><a href='#'>Services</a></li>
+              <li class="page-footer__link"><a href='#'>Services</a></li>
               <li>·</li>
-              <li><a href='#'>Contact</a></li>
+              <li class="page-footer__link"><a href='#'>Contact</a></li>
             </ul>
           </div>
           <a class="scroll-up" href="#"></a>  
