hover in process

--- a/src/styles/wrapper-flex.less
+++ b/src/styles/wrapper-flex.less
@@ -10,9 +10,11 @@
     align-items: center;
     min-height: 112px;
   }
-
-  &--top-header {
-    padding: 10px 0;
+ 
+ &--top-header {
+     /* min-height: 40px;
+   
+  padding: 10px 0;*/
   }
 
   &--portfolio-small {
