--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -121,7 +121,7 @@
     line-height: 30px;
     color: #fff;
     background-color: #00bc9c;
-    box-shadow: 0 -2px rgba(0,0,0,.15) inset;
+    box-shadow: 0 -2px rgba(0, 0, 0, .15) inset;
   }
 }
 
@@ -143,7 +143,7 @@
   right: 0;
   width: 40px;
   height: 40px;
-  background: rgba(80, 106, 133,.75) no-repeat 12px 15px;
+  background: rgba(80, 106, 133, .75) no-repeat 12px 15px;
   background-image: url(../img/icon-up-open-mini.png);
   border-radius: 3px;
   opacity: .5;
