--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -7,7 +7,7 @@
 
   &__list {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
   }
 
@@ -16,20 +16,28 @@
     height: 40px;
   }
 
+  &__icon {
+    width: 10px;
+    height: 11px;
+
+    &--first {
+      width: 6px;
+    }
+  }
   &__item {
-    margin-right: 10px;
+   /* margin-right: 10px;*/
+    padding: 12px 9px;
+    border: 1px solid rgb(14, 232, 248);
 
-    .header__list--social & {
-      margin-right: 20px;
-
-      &--last {
-        margin-right: 10px;
-      }
+    &--first {
+      padding-left: 0;
     }
   }
 
   &__info {
     margin-left: 8px;
+    font-weight: normal;
+    font-size: 12px;
   }
 }
 
@@ -40,14 +48,14 @@
   &__link {
     display: block;
     padding: 48px 22px;
-    text-transform: uppercase;
+    text-transform: uppercase;   
   }
 }
 
 .search {
   display: flex;
-  margin-right: 10px;
-  align-items: center;
+  padding: 10px;
+  margin: 0 20px 0 120px;
 
   &__img {
     width: 12px;
