--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,101 +1,101 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap' rel='stylesheet'>
-    <link rel='stylesheet' href='css/style.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Reen</title>
   </head>
   <body>
-    <header class='header'>
-      <div class='header__wrapper'>
-        <div class='container'>
-          <div class='wrapper-flex wrapper-flex--top-header'>
-            <ul class='header__list'>
-              <li class='header__item'>
-                <a href='#'>
-                  <img src='img/icon-mail-1.png' alt='info@reen.com'>
-                  <span class='header__info'>info@reen.com</span>
+    <header class="header">
+      <div class="header__wrapper">
+        <div class="container">
+          <div class="wrapper-flex">
+            <ul class="header__list">
+              <li class="header__item header__item--first">
+                <a href="#">
+                  <img src="img/icon-mail-1.png" alt="info@reen.com">
+                  <span class="header__info">info@reen.com</span>
                 </a>                      
               </li>
-              <li class='header__item'>
-                <a href='#'>
-                  <img src='img/icon-mobile.png' alt='+00(123)4567890'>
-                  <span class='header__info'>+00(123)4567890</span>
+              <li class="header__item">
+                <a href="#">
+                  <img src="img/icon-mobile.png" alt="+00(123)4567890">
+                  <span class="header__info">+00 (123) 456 78 90</span>
                 </a>
               </li>
             </ul>
-            <ul class='header__list header__list--social'>
-              <li class='header__item'>
-                <a href='#'>
-                  <img src='img/icon-s-facebook.png' alt='Facebook'>
+            <ul class="header__list header__list--social">
+              <li class="header__item">
+                <a href="#">
+                  <img class="header__icon header__icon--first" src="img/icon-s-facebook.png" alt="Facebook">
                 </a>
               </li>
-              <li class='header__item'>
-                <a href='#'>
-                  <img src='img/icon-s-gplus.png' alt='Gplus'>
+              <li class="header__item">
+                <a href="#">
+                  <img class="header__icon" src="img/icon-s-gplus.png" alt="Gplus">
                 </a>
               </li>
-              <li class='header__item'>
-                <a href='#'>
-                  <img src='img/icon-s-twitter.png' alt='Twitter'>
+              <li class="header__item">
+                <a href="#">
+                  <img class="header__icon" src="img/icon-s-twitter.png" alt="Twitter">
                 </a>
               </li>
-              <li class='header__item'>
-                <a href='#'>
-                 <img src='img/icon-s-pinterest.png' alt='Pinterest'>
+              <li class="header__item">
+                <a href="#">
+                 <img class="header__icon" src="img/icon-s-pinterest.png" alt="Pinterest">
                 </a>
               </li>
-              <li class='header__item'>
-                <a href='#'>
-                 <img src='img/icon-s-behance.png' alt='Behance'>
+              <li class="header__item">
+                <a href="#">
+                 <img class="header__icon" src="img/icon-s-behance.png" alt="Behance">
                 </a>
               </li>
-              <li class='header__item header__item--last'>
-                <a href='#'>
-                 <img src='img/icon-s-dribbble.png' alt='Dribbble'>
+              <li class="header__item">
+                <a href="#">
+                 <img class="header__icon" src="img/icon-s-dribbble.png" alt="Dribbble">
                 </a>
               </li>
             </ul>
           </div>  
         </div>
       </div>
-      <div class='container'>
-        <div class='wrapper-flex wrapper-flex--wrap wrapper-flex--header'>
-          <img class='header__logo' src='img/logo.svg' alt='Logo REEN'>
+      <div class="container">
+        <div class="wrapper-flex wrapper-flex--wrap wrapper-flex--header">
+          <img class="header__logo" src="img/logo.svg" alt="Logo REEN">
 
-          <ul class='main-menu'>
-            <li><a class="main-menu__link" href='home.html'>Home</a></li>
-            <li><a class="main-menu__link" href='portfolio.html'>Portfolio</a></li>
-            <li><a class="main-menu__link" href='blog.html'>Blog</a></li>
-            <li><a class="main-menu__link" href='pages.html'>Pages</a></li>
-            <li><a class="main-menu__link" href='features.html'>Features</a></li>
-            <li><a class="main-menu__link" href='megamenu.html'>Mega Menu</a></li>
-            <li><a class="main-menu__link" href='contact.html'>Contact</a></li>
+          <ul class="main-menu">
+            <li><a class="main-menu__link" href="home.html">Home</a></li>
+            <li><a class="main-menu__link" href="portfolio.html">Portfolio</a></li>
+            <li><a class="main-menu__link" href="blog.html">Blog</a></li>
+            <li><a class="main-menu__link" href="pages.html">Pages</a></li>
+            <li><a class="main-menu__link" href="features.html">Features</a></li>
+            <li><a class="main-menu__link" href="megamenu.html">Mega Menu</a></li>
+            <li><a class="main-menu__link" href="contact.html">Contact</a></li>
           </ul>
 
-          <div class='search'>
-            <img class='search__img' src='img/icon-search.png' alt='Search'>
+          <div class="search">
+            <img class="search__img" src="img/icon-search.png" alt="Search">
           </div>
         </div>
       </div>
     </header>
 
     <main>
-      <div class='slider'>
+      <div class="slider">
         <ul>
           <li>
-            <img class="slider__img" src='img/image-1.jpg'>
+            <img class="slider__img" src="img/image-1.jpg">
             <div class="slider__content">
-              <div class='container'>
+              <div class="container">
                 <h1 class="slider__title">Made for Designers</h1>
                 <p class="slider__text">Create your online portfolio in minutes with
                   the professionally and lovingly designed REEN</br>
                   website template. Customize your site with versatile
                   and easy to use features.</p>
-                <a class='button button--slider' href='#'>Get Started Now</a>
+                <a class="button button--slider" href="#">Get Started Now</a>
               </div>
             </div>
           </li>
@@ -116,26 +116,26 @@
       </div>
 
       <section>
-        <div class='container'>
+        <div class="container">
           <div class="common-features">
             <h1 class="common-features__title">Beautiful. Clean. Responsive.</h1>
             <p class="common-features__text">REEN is a high-quality solution for those
               who want a beautiful website in no time. 
-              It's fully responsive and will adapt itself to any mobile device.
+              It"s fully responsive and will adapt itself to any mobile device.
               iPad, iPhone, Android,
-              it doesn't matter. Your content will always looks its absolute best.</p>
+              it doesn"t matter. Your content will always looks its absolute best.</p>
           </div>
 
-          <ul class='features'>
-            <li class='features__item features__item--heart'>
-              <h1 class='features__title'>Passion</h1>
+          <ul class="features">
+            <li class="features__item features__item--heart">
+              <h1 class="features__title">Passion</h1>
               <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
                 aut labor. Laceaque quiae sitiorem rest
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
             </li>
-            <li class='features__item features__item--lamp'>
+            <li class="features__item features__item--lamp">
               <h1 class="features__title">Creativity</h1>
               <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
@@ -143,7 +143,7 @@
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
             </li>
-            <li class='features__item features__item--star'>
+            <li class="features__item features__item--star">
               <h1 class="features__title">Quality</h1>
               <p>Magnis modipsae que lib voloratati
                  andigen daepeditem quiate re porem
@@ -156,21 +156,21 @@
         </div>                   
       </section>
 
-      <section class='portfolio'>
-        <div class='container'>
+      <section class="portfolio">
+        <div class="container">
           <h1 class="portfolio__caption">Check out our latest works</h1>
           <p class="portfolio__text">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
           
-          <div class='wrapper-flex'>
+          <div class="wrapper-flex">
             <figure class="picture">
-              <img class="picture__img" src='img/image_granthotel.jpg' alt='Grand Motel gets an identity brushup'>
+              <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
               <figcaption>
                 <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
                 <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
             <figure class="picture">
-              <img class="picture__img" src='img/image_figure2.jpg' alt='Fresh branding for a creative startup'>
+              <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
               <figcaption>
                 <h1 class="picture__name">Fresh branding for a creative startup</h1>
                 <p class="picture__text">Identity</p>
@@ -178,11 +178,11 @@
             </figure>
           </div>
 
-          <ul class='wrapper-flex wrapper-flex--portfolio-small'>
-            <li><img src='img/image-item-1.jpg'></li>
-            <li><img src='img/image-item-2.jpg'></li>
-            <li><img src='img/image-item-3.jpg'></li>
-            <li><img src='img/image-item-4.jpg'></li> 
+          <ul class="wrapper-flex wrapper-flex--portfolio-small">
+            <li><img src="img/image-item-1.jpg"></li>
+            <li><img src="img/image-item-2.jpg"></li>
+            <li><img src="img/image-item-3.jpg"></li>
+            <li><img src="img/image-item-4.jpg"></li> 
           </ul> 
           
           <ul class="pagination-portfolio">
@@ -196,44 +196,44 @@
         </div>   
       </section>
        
-      <section class='cooperation'>
-        <div class='container'>
+      <section class="cooperation">
+        <div class="container">
           <h1 class="cooperation__caption">Want to work with us?</h1>
           <p class="cooperation__text">Magnis modipsae que voloratati andigen
              daepeditem quiate re porem aut labor. 
              Laceaque quiae sitiorem rest non restibusaes
              maio es dem tumquam.</p>
-          <a class='button button--cooperation' href='#'>Get in touch</a>
+          <a class="button button--cooperation" href="#">Get in touch</a>
         </div>
       </section>
     </main>
 
-    <footer class='footer'>
-      <div class='container'>
-        <div class='wrapper-flex wrapper-flex--footer-info'>
-          <div class='footer__section'>
+    <footer class="footer">
+      <div class="container">
+        <div class="wrapper-flex wrapper-flex--footer-info">
+          <div class="footer__section">
             <h1 class="footer__title">Who we are</h1>
-            <img class="footer__logo" src='img/footer_logo.svg' alt='footer_logo'>
+            <img class="footer__logo" src="img/footer_logo.svg" alt="footer_logo">
             <p class="footer__text footer__text--one">
               Magnis modipsae voloratati andigen
               daepeditem quiate re porem que aut
               labor. Laceaque eictemperum quiae
               sitiorem rest non restibusaes 
               maio es dem tumquam.</p>
-            <a class="footer__link footer__link--thick href="#">
+            <a class="footer__link footer__link--thick" href="#">
               <span class="footer__more-link">More about us</span>
             </a>   
           </div>
-          <div class='footer__section'>
+          <div class="footer__section">
             <h1 class="footer__title">Latest works</h1>
-            <ul class='footer__pictures'>
-               <li class="footer__img"><img src='img/footer-image-1.jpg'></li>
-               <li class="footer__img"><img src='img/footer-image-2.jpg'></li>
-               <li class="footer__img"><img src='img/footer-image-3.jpg'></li>
-               <li class="footer__img"><img src='img/footer-image-4.jpg'></li>
+            <ul class="footer__pictures">
+               <li class="footer__img"><img src="img/footer-image-1.jpg"></li>
+               <li class="footer__img"><img src="img/footer-image-2.jpg"></li>
+               <li class="footer__img"><img src="img/footer-image-3.jpg"></li>
+               <li class="footer__img"><img src="img/footer-image-4.jpg"></li>
             </ul>
           </div>
-          <div class='footer__section'>
+          <div class="footer__section">
             <h1 class="footer__title">Get in touch</h1>
             <p class="footer__text">Doloreiur quia commolu
               ptatemp dolupta oreprerum tibusam eumenis et consent 
@@ -242,26 +242,26 @@
             <ul>
               <li>
                 <a class="footer__link" href="#">
-                  <img class="footer__icon" src='img/icon-location.svg'>
+                  <img class="footer__icon" src="img/icon-location.svg">
                   <span>84 Street, City, State 24813</span>
                 </a>
               </li>
               <li>
                 <a class="footer__link" href="#">
-                  <img class="footer__icon" src='img/icon-mobile.svg'>
+                  <img class="footer__icon" src="img/icon-mobile.svg">
                   <span>+00 (123) 456 78 90</span>
                 </a>
               </li>
               <li>
                 <a class="footer__link" href="#">
-                  <img class="footer__icon" src='img/icon-mail.svg'>
+                  <img class="footer__icon" src="img/icon-mail.svg">
                   <span>info@reen.com</span>
                 </a>
               </li>
             </ul>   
 
           </div>
-          <div class='footer__section'>
+          <div class="footer__section">
             <h1 class="footer__title">Free updates</h1>
             <p class="footer__text">Conecus iure posae volor remped modis</br> 
               aut lor volor accabora incim resto explabo.</p>
@@ -277,18 +277,18 @@
         <div class="container">
           <div class="wrapper-flex wrapper-flex--page-footer">
             <p class="page-footer__info">© 2014 REEN. All rights reserved.</p>
-            <ul class='wrapper-flex wrapper-flex--footer-nav'>
-              <li class="page-footer__link"><a href='#'>Home</a></li>
+            <ul class="wrapper-flex wrapper-flex--footer-nav">
+              <li class="page-footer__link"><a href="#">Home</a></li>
               <li>·</li>
-              <li class="page-footer__link"><a href='#'>Portfolio</a></li>
+              <li class="page-footer__link"><a href="#">Portfolio</a></li>
               <li>·</li>
-              <li class="page-footer__link"><a href='#'>Blog</a></li>
+              <li class="page-footer__link"><a href="#">Blog</a></li>
               <li>·</li>
-              <li class="page-footer__link"><a href='#'>About</a></li>
+              <li class="page-footer__link"><a href="#">About</a></li>
               <li>·</li>
-              <li class="page-footer__link"><a href='#'>Services</a></li>
+              <li class="page-footer__link"><a href="#">Services</a></li>
               <li>·</li>
-              <li class="page-footer__link"><a href='#'>Contact</a></li>
+              <li class="page-footer__link"><a href="#">Contact</a></li>
             </ul>
           </div>
           <a class="scroll-up" href="#"></a>  
