icon color ready

--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -22,15 +22,39 @@
 
     &--first {
       width: 6px;
-    }
+    }    
   }
+
   &__item {
-   /* margin-right: 10px;*/
     padding: 12px 9px;
     border: 1px solid rgb(14, 232, 248);
 
     &--first {
       padding-left: 0;
+    }
+
+    &--indigo:hover {
+      background-color: #94b1f0;
+    }
+
+    &--orange:hover {
+      background-color: #de5745;
+    }
+
+    &--blue:hover {
+      background-color: #2fbbed;
+    }
+
+    &--red:hover {
+      background-color: #d94348;
+    }
+
+    &--dark-blue:hover {
+      background-color: #3079ff;
+    }
+
+    &--pink:hover {
+      background-color: #eb6397;
     }
   }
 
