--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,32 +28,32 @@
               </li>
             </ul>
             <ul class="header__list header__list--social">
-              <li class="header__item">
+              <li class="header__item header__item--indigo">
                 <a href="#">
                   <img class="header__icon header__icon--first" src="img/icon-s-facebook.png" alt="Facebook">
                 </a>
               </li>
-              <li class="header__item">
+              <li class="header__item header__item--orange">
                 <a href="#">
                   <img class="header__icon" src="img/icon-s-gplus.png" alt="Gplus">
                 </a>
               </li>
-              <li class="header__item">
+              <li class="header__item header__item--blue">
                 <a href="#">
                   <img class="header__icon" src="img/icon-s-twitter.png" alt="Twitter">
                 </a>
               </li>
-              <li class="header__item">
+              <li class="header__item header__item--red">
                 <a href="#">
                  <img class="header__icon" src="img/icon-s-pinterest.png" alt="Pinterest">
                 </a>
               </li>
-              <li class="header__item">
+              <li class="header__item header__item--dark-blue">
                 <a href="#">
                  <img class="header__icon" src="img/icon-s-behance.png" alt="Behance">
                 </a>
               </li>
-              <li class="header__item">
+              <li class="header__item header__item--pink">
                 <a href="#">
                  <img class="header__icon" src="img/icon-s-dribbble.png" alt="Dribbble">
                 </a>
