portfolio.less hover

--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -4,7 +4,11 @@
   color: #fff;
 	background: #00bc9c;	  
 	border-radius: 3px;
-	box-shadow: 0 -2px rgba(0, 0, 0, .15) inset;
+  box-shadow: 0 -2px rgba(0, 0, 0, .15) inset;
+  
+  &:hover {
+    color: #fff;
+  }
 
   &--slider {
     padding: 23px 70px;
