--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -163,14 +163,20 @@
           
           <div class="wrapper-flex">
             <figure class="picture">
-              <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
+              <div class="picture__hover">
+                <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
+                <div class="picture__after"></div>
+              </div>
               <figcaption>
                 <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
                 <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
             <figure class="picture">
-              <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
+              <div class="picture__hover">
+                <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
+                <div class="picture__after"></div>
+              </div>
               <figcaption>
                 <h1 class="picture__name">Fresh branding for a creative startup</h1>
                 <p class="picture__text">Identity</p>
@@ -179,7 +185,10 @@
           </div>
 
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
-            <li><img src="img/image-item-1.jpg"></li>
+            <div class="picture__hover picture__hover--small">
+              <li><img src="img/image-item-1.jpg"></li>
+              <div class="picture__after"></div>
+            </div>
             <li><img src="img/image-item-2.jpg"></li>
             <li><img src="img/image-item-3.jpg"></li>
             <li><img src="img/image-item-4.jpg"></li> 
