--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -19,10 +19,37 @@
 }
 
 .picture {
-	margin: 0;
+  margin: 0;
 	margin-bottom: 80px;
   padding: 0;
   background-color: #fff;
+
+  &__hover {
+    position: relative;
+    width: 570px;
+    height: 390px;
+
+    &--small {
+      width: 270px;
+      height: 185px;
+    }
+  }
+
+  &__after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+
+    &:hover {
+      background-image: url('../img/icon-plus.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-color: rgba( 0, 188, 156, .7);
+    }
+  }
 
   &__img {
     width: 570px;
@@ -33,6 +60,10 @@
     padding-top: 25px;
     font-size: 20px;
     line-height: 26px;
+
+    &:hover {
+      color: #00bc9c;
+    }
   }
 
   &__text {
@@ -81,5 +112,3 @@
     }
   }
 }
-
-
