--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -24,33 +24,6 @@
   padding: 0;
   background-color: #fff;
 
-  &__hover {
-    position: relative;
-    width: 570px;
-    height: 390px;
-
-    &--small {
-      width: 270px;
-      height: 185px;
-    }
-  }
-
-  &__after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    color: #fff;
-
-    &:hover {
-      background-image: url('../img/icon-plus.png');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-color: rgba( 0, 188, 156, .7);
-    }
-  }
-
   &__img {
     width: 570px;
     height: 390px;
@@ -110,5 +83,44 @@
     &--right {
       background-image: url(../img/icon-right-open-mini.png);
     }
+  }
+}
+
+.image-container {
+  position: relative;
+  width: 570px;
+  height: 390px;
+
+  &--small {
+    width: 270px;
+    height: 185px;
+  }
+
+  &:hover .image-container__wrapper{
+    display: block;
+    background-image: url('../img/icon-plus.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: rgba( 0, 188, 156, .7);
+
+    &--s {
+      background-color: rgba( 0, 188, 156, .7);
+      background-image: none;
+    }
+  }
+  
+  &__text {
+
+
+  }
+
+  &__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    color: #fff;
   }
 }
