--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -163,9 +163,9 @@
           
           <div class="wrapper-flex">
             <figure class="picture">
-              <div class="picture__hover">
+              <div class="image-container">
                 <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
-                <div class="picture__after"></div>
+                <div class="image-container__wrapper"></div>
               </div>
               <figcaption>
                 <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
@@ -173,9 +173,9 @@
               </figcaption>
             </figure>
             <figure class="picture">
-              <div class="picture__hover">
+              <div class="image-container">
                 <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
-                <div class="picture__after"></div>
+                <div class="image-container__wrapper"></div>
               </div>
               <figcaption>
                 <h1 class="picture__name">Fresh branding for a creative startup</h1>
@@ -185,13 +185,24 @@
           </div>
 
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
-            <div class="picture__hover picture__hover--small">
+            <div class="image-container image-container--small">
               <li><img src="img/image-item-1.jpg"></li>
-              <div class="picture__after"></div>
+              <div class="image-container__wrapper"></div> 
             </div>
-            <li><img src="img/image-item-2.jpg"></li>
-            <li><img src="img/image-item-3.jpg"></li>
-            <li><img src="img/image-item-4.jpg"></li> 
+            <div class="image-container image-container--small">
+              <li><img src="img/image-item-2.jpg"></li>
+              <div class="image-container__wrapper"></div>
+            </div>
+            <div class="image-container image-container--small">
+                <li><img src="img/image-item-3.jpg"></li>
+                <div class="image-container__wrapper image-container__wrapper--text">
+                  <p class="image-container__text">Astor & Yancy</p>
+                </div>
+            </div>
+            <div class="image-container image-container--small">
+              <li><img src="img/image-item-4.jpg"></li> 
+              <div class="image-container__wrapper"></div>
+            </div>
           </ul> 
           
           <ul class="pagination-portfolio">
