--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,33 +28,33 @@
               </li>
             </ul>
             <ul class="header__list header__list--social">
-              <li class="header__item header__item--indigo">
-                <a href="#">
+              <li>
+                <a class="header__item header__item--indigo" href="#">
                   <img class="header__icon header__icon--first" src="img/icon-s-facebook.png" alt="Facebook">
                 </a>
               </li>
-              <li class="header__item header__item--orange">
-                <a href="#">
+              <li>
+                <a class="header__item header__item--orange" href="#">
                   <img class="header__icon" src="img/icon-s-gplus.png" alt="Gplus">
                 </a>
               </li>
-              <li class="header__item header__item--blue">
-                <a href="#">
+              <li>
+                <a class="header__item header__item--blue" href="#">
                   <img class="header__icon" src="img/icon-s-twitter.png" alt="Twitter">
                 </a>
               </li>
-              <li class="header__item header__item--red">
-                <a href="#">
+              <li>
+                <a class="header__item header__item--red" href="#">
                  <img class="header__icon" src="img/icon-s-pinterest.png" alt="Pinterest">
                 </a>
               </li>
-              <li class="header__item header__item--dark-blue">
-                <a href="#">
+              <li>
+                <a class="header__item header__item--dark-blue" href="#">
                  <img class="header__icon" src="img/icon-s-behance.png" alt="Behance">
                 </a>
               </li>
-              <li class="header__item header__item--pink">
-                <a href="#">
+              <li>
+                <a class="header__item header__item--pink" href="#">
                  <img class="header__icon" src="img/icon-s-dribbble.png" alt="Dribbble">
                 </a>
               </li>
@@ -163,46 +163,38 @@
           
           <div class="wrapper-flex">
             <figure class="picture">
-              <div class="image-container">
-                <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
-                <div class="image-container__wrapper"></div>
-              </div>
+              <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
+              <div class="picture__wrapper"></div>
               <figcaption>
                 <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
                 <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
             <figure class="picture">
-              <div class="image-container">
-                <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
-                <div class="image-container__wrapper"></div>
-              </div>
+              <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
+              <div class="picture__wrapper"></div>
               <figcaption>
                 <h1 class="picture__name">Fresh branding for a creative startup</h1>
                 <p class="picture__text">Identity</p>
               </figcaption>
             </figure>
           </div>
-
+<!---проработать раздел с ховером картинок-->
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
-            <div class="image-container image-container--small">
-              <li><img src="img/image-item-1.jpg"></li>
-              <div class="image-container__wrapper"></div> 
-            </div>
-            <div class="image-container image-container--small">
-              <li><img src="img/image-item-2.jpg"></li>
-              <div class="image-container__wrapper"></div>
-            </div>
-            <div class="image-container image-container--small">
-                <li><img src="img/image-item-3.jpg"></li>
-                <div class="image-container__wrapper image-container__wrapper--text">
-                  <p class="image-container__text">Astor & Yancy</p>
-                </div>
-            </div>
-            <div class="image-container image-container--small">
-              <li><img src="img/image-item-4.jpg"></li> 
-              <div class="image-container__wrapper"></div>
-            </div>
+            <li class="picture"><img src="img/image-item-1.jpg">
+              <div class="picture__wrapper picture__wrapper--small"></div> 
+            </li>
+            <li class="picture"><img src="img/image-item-2.jpg">
+              <div class="picture__wrapper picture__wrapper--small"></div>
+            </li>
+            <li class="picture"><img src="img/image-item-3.jpg">
+              <div class="picture__wrapper picture__wrapper--small">
+                <a class="picture__wrapper__text">Astor & Yancy</a>
+              </div>
+            </li>
+            <li class="picture"><img src="img/image-item-4.jpg"> 
+              <div class="picture__wrapper picture__wrapper--small"></div>
+            </li>            
           </ul> 
           
           <ul class="pagination-portfolio">
