--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -19,10 +19,33 @@
 }
 
 .picture {
+  position: relative;
   margin: 0;
 	margin-bottom: 80px;
   padding: 0;
   background-color: #fff;
+  
+  &:hover .picture__wrapper {
+    display: block;
+    background-image: url('../img/icon-plus.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: rgba( 0, 188, 156, .7);
+  }
+
+  &__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    color: #fff;
+    width: 570px;
+    height: 390px; 
+    
+    &--small {
+      width: 270px;
+      height: 185px;
+    }
 
   &__img {
     width: 570px;
@@ -57,17 +80,27 @@
   align-items: center;
           
   &__item {
+    cursor: pointer;
     width: 15px;
     height: 15px;
     border-radius: 50%;
     background: #506a85;
+
+    &:hover {
+      background-color: #acb7c2;
+    }
  
     &--active {
       background-color: #00bc9c;
+
+      &:hover {
+        background-color: #00bc9c;
+      }
     }
   }
 
   &__arrow {
+    cursor: pointer;
     width: 30px;
     height: 30px;
     margin-right: 5px;
@@ -76,6 +109,10 @@
     border-radius: 3px;
     background-size: 8px;
 
+    &:hover {
+      opacity: .8;
+    } 
+
     &--left {
       background-image: url(../img/icon-left-open-mini.png);
     }
@@ -83,44 +120,5 @@
     &--right {
       background-image: url(../img/icon-right-open-mini.png);
     }
-  }
-}
-
-.image-container {
-  position: relative;
-  width: 570px;
-  height: 390px;
-
-  &--small {
-    width: 270px;
-    height: 185px;
-  }
-
-  &:hover .image-container__wrapper{
-    display: block;
-    background-image: url('../img/icon-plus.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: rgba( 0, 188, 156, .7);
-
-    &--s {
-      background-color: rgba( 0, 188, 156, .7);
-      background-image: none;
-    }
-  }
-  
-  &__text {
-
-
-  }
-
-  &__wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: none;
-    color: #fff;
   }
 }
