--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -21,9 +21,24 @@
 .picture {
   position: relative;
   margin: 0;
-	margin-bottom: 80px;
+  margin-bottom: 150px;         /*?????*/
   padding: 0;
   background-color: #fff;
+
+  &__wrapper-plus {
+    font-size: 20px;
+    color: #fff;
+
+    &--text {
+      font-size: 26px;
+      color: #fff;
+    }
+  }
+
+  &__img {
+    width: 100%;
+    height: 100%;
+  }
   
   &:hover .picture__wrapper {
     display: block;
@@ -31,41 +46,39 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgba( 0, 188, 156, .7);
+  
+    &--small {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-image: none;
+    }
   }
 
   &__wrapper {
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     display: none;
     color: #fff;
-    width: 570px;
-    height: 390px; 
-    
-    &--small {
-      width: 270px;
-      height: 185px;
+        
+    &__name {
+      padding-top: 25px;
+      font-size: 20px;
+      line-height: 26px;
+
+      &:hover {
+        color: #00bc9c;
+      }
     }
 
-  &__img {
-    width: 570px;
-    height: 390px;
-  }
-
-  &__name {
-    padding-top: 25px;
-    font-size: 20px;
-    line-height: 26px;
-
-    &:hover {
-      color: #00bc9c;
+    &__text {
+      margin: 7px 0 28px;
+  	  font-size: 14px;
+      line-height: 20px;
     }
-  }
-
-  &__text {
-    margin: 7px 0 28px;
-  	font-size: 14px;
-    line-height: 20px;
   }
 }
  
@@ -73,7 +86,7 @@
   position: absolute;
   right: 50%;
   transform: translateX(50%);
-  bottom: 150px;
+  bottom: 230px;
   width: 160px;
   display: flex;
   justify-content: space-between;
