--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -179,21 +179,33 @@
               </figcaption>
             </figure>
           </div>
-<!---проработать раздел с ховером картинок-->
+
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
-            <li class="picture"><img src="img/image-item-1.jpg">
-              <div class="picture__wrapper picture__wrapper--small"></div> 
+            <li class="picture">
+              <img class="picture__img" src="img/image-item-1.jpg">
+              <a href="#" class="picture__wrapper picture__wrapper--small">
+                <span class="picture__wrapper-plus">+</span>
+              </a> 
             </li>
-            <li class="picture"><img src="img/image-item-2.jpg">
-              <div class="picture__wrapper picture__wrapper--small"></div>
+            <li class="picture">
+              <img class="picture__img" src="img/image-item-2.jpg">
+              <a href="#" class="picture__wrapper picture__wrapper--small">
+                <span class="picture__wrapper-plus">+</span>
+              </a>
             </li>
-            <li class="picture"><img src="img/image-item-3.jpg">
-              <div class="picture__wrapper picture__wrapper--small">
-                <a class="picture__wrapper__text">Astor & Yancy</a>
-              </div>
+            <li class="picture">
+              <img class="picture__img" src="img/image-item-3.jpg">
+              <a href="#" class="picture__wrapper picture__wrapper--small">
+                <span class="picture__wrapper-plus picture__wrapper-plus--text">
+                  Astor & Yancy
+                </span>
+              </a>
             </li>
-            <li class="picture"><img src="img/image-item-4.jpg"> 
-              <div class="picture__wrapper picture__wrapper--small"></div>
+            <li class="picture">
+              <img class="picture__img" src="img/image-item-4.jpg"> 
+              <a href="#" class="picture__wrapper picture__wrapper--small">
+                <span class="picture__wrapper-plus">+</span>
+              </a>
             </li>            
           </ul> 
           
