there's one problem with portfolio

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -159,25 +159,30 @@
       <section class="portfolio">
         <div class="container">
           <h1 class="portfolio__caption">Check out our latest works</h1>
-          <p class="portfolio__text">Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
-          
+          <p class="portfolio__text">Magnis modipsae que voloratati
+             andigen daepeditem quiate re porem aut labor.</p>
+                       
           <div class="wrapper-flex">
-            <figure class="picture">
-              <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
-              <div class="picture__wrapper"></div>
-              <figcaption>
+            <div class="blok">
+              <div class="picture">
+                <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
+                <div class="picture__wrapper"></div>
+              </div>
+              <div class="picture__caption">
                 <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
                 <p class="picture__text">Identity</p>
-              </figcaption>
-            </figure>
-            <figure class="picture">
-              <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
-              <div class="picture__wrapper"></div>
-              <figcaption>
+              </div>
+            </div>
+            <div class="blok">
+              <div class="picture">
+                <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
+                <div class="picture__wrapper"></div>
+              </div>
+              <div class="picture__caption">
                 <h1 class="picture__name">Fresh branding for a creative startup</h1>
                 <p class="picture__text">Identity</p>
-              </figcaption>
-            </figure>
+              </div>
+            </div>
           </div>
 
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
@@ -250,11 +255,28 @@
           </div>
           <div class="footer__section">
             <h1 class="footer__title">Latest works</h1>
+
             <ul class="footer__pictures">
-               <li class="footer__img"><img src="img/footer-image-1.jpg"></li>
-               <li class="footer__img"><img src="img/footer-image-2.jpg"></li>
-               <li class="footer__img"><img src="img/footer-image-3.jpg"></li>
-               <li class="footer__img"><img src="img/footer-image-4.jpg"></li>
+              <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-1.jpg">
+               <a href="#" class="picture__wrapper picture__wrapper--small">
+                  <span class="picture__wrapper-plus">+</span>
+                </a>
+              </li>
+              <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-2.jpg">
+                <a href="#" class="picture__wrapper picture__wrapper--small">
+                   <span class="picture__wrapper-plus">+</span>
+                 </a>
+               </li>
+               <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-3.jpg">
+                <a href="#" class="picture__wrapper picture__wrapper--small">
+                   <span class="picture__wrapper-plus">+</span>
+                 </a>
+               </li>
+               <li class="picture picture--footer"><img class="picture__img" src="img/footer-image-4.jpg">
+                <a href="#" class="picture__wrapper picture__wrapper--small">
+                   <span class="picture__wrapper-plus">+</span>
+                 </a>
+               </li>
             </ul>
           </div>
           <div class="footer__section">
