--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -68,12 +68,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
   }
-
-  &__img {
-    margin: 0;
-    margin-right: 5px;
-  }
-
+  
   &__icon {
     width: 11px;
     height: 14px;
@@ -122,6 +117,12 @@
     color: #fff;
     background-color: #00bc9c;
     box-shadow: 0 -2px rgba(0, 0, 0, .15) inset;
+  
+    &:hover {
+      cursor: pointer;
+      color: #fff;
+      background-color: #2ef0cf;
+    }
   }
 }
 
@@ -147,6 +148,10 @@
   background-image: url(../img/icon-up-open-mini.png);
   border-radius: 3px;
   opacity: .5;
+
+  &:hover {
+    opacity: .7;
+  }
 }
   
   
