--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -21,16 +21,25 @@
 .picture {
   position: relative;
   margin: 0;
-  margin-bottom: 150px;         /*?????*/
   padding: 0;
   background-color: #fff;
 
+  &--footer {
+    margin: 0;
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
+  
+  &__caption {
+    background-color:rgb(248, 203, 203);
+  }
+   
   &__wrapper-plus {
     font-size: 20px;
     color: #fff;
 
     &--text {
-      font-size: 26px;
+      font-size: 18px;
       color: #fff;
     }
   }
@@ -39,6 +48,7 @@
     width: 100%;
     height: 100%;
   }
+
   
   &:hover .picture__wrapper {
     display: block;
@@ -55,6 +65,22 @@
     }
   }
 
+  &__name {
+    padding-top: 25px;
+    font-size: 20px;
+    line-height: 26px;
+
+    &:hover {
+      color: #00bc9c;
+    }
+  }
+
+  &__text {
+    padding: 7px 0 28px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
   &__wrapper {
     position: absolute;
     top: 0;
@@ -63,22 +89,6 @@
     right: 0;
     display: none;
     color: #fff;
-        
-    &__name {
-      padding-top: 25px;
-      font-size: 20px;
-      line-height: 26px;
-
-      &:hover {
-        color: #00bc9c;
-      }
-    }
-
-    &__text {
-      margin: 7px 0 28px;
-  	  font-size: 14px;
-      line-height: 20px;
-    }
   }
 }
  
@@ -86,7 +96,7 @@
   position: absolute;
   right: 50%;
   transform: translateX(50%);
-  bottom: 230px;
+  bottom: 130px;
   width: 160px;
   display: flex;
   justify-content: space-between;
