--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -162,45 +162,45 @@
           <p class="portfolio__text">Magnis modipsae que voloratati
              andigen daepeditem quiate re porem aut labor.</p>
                        
-          <div class="wrapper-flex">
-            <div class="blok">
-              <div class="picture">
-                <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
-                <div class="picture__wrapper"></div>
-              </div>
-              <div class="picture__caption">
-                <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
-                <p class="picture__text">Identity</p>
-              </div>
+          <div class="wrapper-flex wrapper-flex--wrap">
+            <div class="picture">
+              <img class="picture__img" src="img/image_granthotel.jpg" alt="Grand Motel gets an identity brushup">
+              <a href="#" class="picture__wrapper">
+                <span class="picture__wrapper-plus">+</span>
+              </a>
+            </div>   
+            <div class="picture">
+              <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
+              <a href="#" class="picture__wrapper">
+                <span class="picture__wrapper-plus">+</span>
+              </a> 
             </div>
-            <div class="blok">
-              <div class="picture">
-                <img class="picture__img" src="img/image_figure2.jpg" alt="Fresh branding for a creative startup">
-                <div class="picture__wrapper"></div>
-              </div>
-              <div class="picture__caption">
-                <h1 class="picture__name">Fresh branding for a creative startup</h1>
-                <p class="picture__text">Identity</p>
-              </div>
+            <div class="picture__caption">
+              <h1 class="picture__name">Grand Motel gets an identity brushup</h1>
+              <p class="picture__text">Identity</p>
             </div>
+            <div class="picture__caption">
+              <h1 class="picture__name">Fresh branding for a creative startup</h1>
+              <p class="picture__text">Identity</p>
+            </div>  
           </div>
 
           <ul class="wrapper-flex wrapper-flex--portfolio-small">
             <li class="picture">
               <img class="picture__img" src="img/image-item-1.jpg">
-              <a href="#" class="picture__wrapper picture__wrapper--small">
+              <a href="#" class="picture__wrapper">
                 <span class="picture__wrapper-plus">+</span>
               </a> 
             </li>
             <li class="picture">
               <img class="picture__img" src="img/image-item-2.jpg">
-              <a href="#" class="picture__wrapper picture__wrapper--small">
+              <a href="#" class="picture__wrapper">
                 <span class="picture__wrapper-plus">+</span>
               </a>
             </li>
             <li class="picture">
               <img class="picture__img" src="img/image-item-3.jpg">
-              <a href="#" class="picture__wrapper picture__wrapper--small">
+              <a href="#" class="picture__wrapper">
                 <span class="picture__wrapper-plus picture__wrapper-plus--text">
                   Astor & Yancy
                 </span>
@@ -208,7 +208,7 @@
             </li>
             <li class="picture">
               <img class="picture__img" src="img/image-item-4.jpg"> 
-              <a href="#" class="picture__wrapper picture__wrapper--small">
+              <a href="#" class="picture__wrapper">
                 <span class="picture__wrapper-plus">+</span>
               </a>
             </li>            
