--- a/src/styles/portfolio.less
+++ b/src/styles/portfolio.less
@@ -23,46 +23,26 @@
   margin: 0;
   padding: 0;
   background-color: #fff;
-
-  &--footer {
-    margin: 0;
-    margin-right: 5px;
-    margin-bottom: 5px;
-  }
   
-  &__caption {
-    background-color:rgb(248, 203, 203);
-  }
-   
-  &__wrapper-plus {
-    font-size: 20px;
+  &__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
     color: #fff;
-
-    &--text {
-      font-size: 18px;
-      color: #fff;
-    }
   }
 
-  &__img {
+  &__img {    
     width: 100%;
     height: 100%;
   }
-
   
-  &:hover .picture__wrapper {
-    display: block;
-    background-image: url('../img/icon-plus.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: rgba( 0, 188, 156, .7);
-  
-    &--small {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-image: none;
-    }
+  &__caption {
+    cursor: pointer;
+    width: 570px;
+    background-color: #fff;    
   }
 
   &__name {
@@ -80,16 +60,31 @@
     font-size: 14px;
     line-height: 20px;
   }
-
-  &__wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    display: none;
+   
+  &__wrapper-plus {
+    font-size: 30px;
+    font-weight: 500;
     color: #fff;
+
+    &--text {
+      font-size: 18px;
+      color: #fff;
+    }
+  }  
+  
+  &:hover .picture__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-image: none;
+    background-color: rgba( 0, 188, 156, .7);
   }
+
+  &--footer {
+    margin: 0;
+    margin-right: 5px;
+    margin-bottom: 5px;
+  } 
 }
  
 .pagination-portfolio {
